Add output of architecture and Ubuntu version

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,10 @@ jobs:
       image: ubuntu:devel
 
     steps:
+    - name: Check architecture
+      run: uname -m
+    - name: Check release version
+      run: lsb_release -cdr
     - name: Update system
       run: apt-get update -y && apt-get upgrade -y
     - name: Install Rust, GTK4 & libadwaita
