--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:devel@sha256:a51c8bb81605567ea27d627425adf94a613d675a664bf473d43a55a8a26416b8
+      platform:
+        - linux/arm64/v8
 
     steps:
     - name: Check architecture
