--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:jammy@sha256:a51c8bb81605567ea27d627425adf94a613d675a664bf473d43a55a8a26416b8
-      options: --platform linux/arm64/v8
+      image: ubuntu:jammy@sha256:31cd7bbfd36421dfd338bceb36d803b3663c1bfa87dfe6af7ba764b5bf34de05
+      # options: --platform linux/arm64/v8
 
     steps:
     - name: Check architecture
