--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,17 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:jammy@sha256:2166a543cffd7180cb98ed58bb6a99b0e4b57ecae8859c2a8ee5aa4f5e0a4fda
-      options: --platform linux/arm64/v8
+    #container:
+    #  image: ubuntu:jammy@sha256:2166a543cffd7180cb98ed58bb6a99b0e4b57ecae8859c2a8ee5aa4f5e0a4fda
+    #  options: --platform linux/arm64/v8
 
     steps:
+    - name: Check docker version
+      run: docker version
+    - name: Pull Ubuntu
+      run: docker pull ubuntu:jammy
+    - name: Run container
+      run: docker run -i -t ubuntu /bin/bash
     - name: Check architecture
       run: uname -m
     - name: Check release version
