--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,8 @@ jobs:
     - name: Check docker version
       run: docker version
     - name: Pull Ubuntu
-      run: docker pull ubuntu:jammy@sha256:62b95dd050572873dbe140d8c5ced653a02f08512585489ed8d7a6ef6ef7a727
+      run: docker pull ubuntu:jammy@sha256:2166a543cffd7180cb98ed58bb6a99b0e4b57ecae8859c2a8ee5aa4f5e0a4fda
+     # run: docker pull ubuntu:jammy@sha256:62b95dd050572873dbe140d8c5ced653a02f08512585489ed8d7a6ef6ef7a727
     - name: Run container
       run: docker run --rm ubuntu uname -m
     - name: Check architecture
