--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Check docker version
       run: docker version
     - name: Run alpine aarch64
-      run: docker run --rm docker.io/library/alpine:3.12.1@sha256:fbb820c07896f5c2516167e7146d9938fc82d4b6b1db167defa5b0a7162e4480 uname -m
+      run: docker run --platform linux/amd64 alpine:3.12.1 uname -m
     - name: Run ARM container
       run: docker run --platform linux/arm64/v8 ubuntu:latest uname -m
     - name: Run x86 container
