--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,10 @@ jobs:
       run: sudo apt-get install qemu binfmt-support qemu-user-static
     - name: Check docker version
       run: docker version
-    - name: Enable multiarch support for docker and check arch
-      run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes --platform linux/arm64/v8 ubuntu:jammy uname -m
-    #- name: Run ARM container
-    #  run: docker run --platform linux/arm64/v8 ubuntu:jammy uname -m
+    - name: Enable multiarch support for docker
+      run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    - name: Run ARM container
+      run: docker run -i --platform linux/arm64/v8 ubuntu:jammy uname -m
     - name: Check architecture
       run: uname -m
     - name: Check release version
