--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Enable multiarch support for docker
       run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - name: Run ARM container
-      run: docker run -i --platform linux/arm64/v8 ubuntu:jammy uname -m
+      run: docker run -i --platform linux/arm64/v8 ubuntu:jammy bash
     - name: Check architecture
       run: uname -m
     - name: Check release version
