--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,9 +26,9 @@ jobs:
     - name: Enable multiarch support for docker
       run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - name: Run ARM container
-      run: docker run -it --platform linux/arm64/v8 ubuntu:jammy bash
+      run: docker run --platform --name buildContainer linux/arm64/v8 ubuntu:jammy uname -m
     - name: Check architecture
-      run: uname -m
+      run: docker exec buildContainer uname -m
     - name: Check release version
       run: cat /etc/lsb-release
     - name: Update system
