--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,8 @@ jobs:
       run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - name: Run ARM container
       run: docker run --platform --name buildContainer linux/arm64/v8 ubuntu:jammy uname -m
+    - name: Check status of container
+      run: docker ps
     - name: Check architecture
       run: docker exec buildContainer uname -m
     - name: Check release version
