--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,13 +52,17 @@ jobs:
             cargo build --verbose
             cargo test --verbose
             ls
+            ls ~/.cargo/bin/
+            ls ~/.cargo/registry/index/
+            ls ~/.cargo/registry/cache/
+            ls ~/.cargo/git/db/
       - name: Check what files are there
         run: ls
       - name: Check what files are there
-        run: ~/.cargo/bin/
+        run: ls ~/.cargo/bin/
       - name: Check what files are there
-        run: ~/.cargo/registry/index/
+        run: ls ~/.cargo/registry/index/
       - name: Check what files are there
-        run: ~/.cargo/registry/cache/
+        run: ls ~/.cargo/registry/cache/
       - name: Check what files are there
-        run: ~/.cargo/git/db/
+        run: ls ~/.cargo/git/db/
