--- a/.github/workflows/release_aarch64.yaml
+++ b/.github/workflows/release_aarch64.yaml
@@ -2,9 +2,11 @@ name: Release_aarch64
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+      - "v*.*.*"
+    #branches: [ master ]
+  #pull_request:
+   # branches: [ master ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -36,7 +38,7 @@ jobs:
             cargo build --release --verbose
             cargo test --release --verbose
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v0.1.14
         # if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
