--- a/.github/workflows/release_aarch64.yaml
+++ b/.github/workflows/release_aarch64.yaml
@@ -2,11 +2,9 @@ name: Release_aarch64
 
 on:
   push:
-    tags:
-      - "v*.*.*"
-    #branches: [ master ]
-  #pull_request:
-   # branches: [ master ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -38,8 +36,8 @@ jobs:
             cargo build --release --verbose
             cargo test --release --verbose
       - name: Release
-        uses: softprops/action-gh-release@v0.1.14
-        # if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             target/release/github_build_test
