--- a/.github/workflows/release_aarch64.yaml
+++ b/.github/workflows/release_aarch64.yaml
@@ -2,6 +2,10 @@ name: Release_aarch64
 
 on:
   push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  push:
     tags:
       - "v*.*.*"
 
@@ -36,6 +40,7 @@ jobs:
             cargo test --release --verbose
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             target/release/github_build_test
