--- a/.github/workflows/release_aarch64.yaml
+++ b/.github/workflows/release_aarch64.yaml
@@ -35,11 +35,26 @@ jobs:
           run: |
             uname -m
             cat /etc/lsb-release
+            cargo build --verbose
+            cargo test --verbose
             cargo build --release --verbose
             cargo test --release --verbose
-      - name: Release
-        uses: softprops/action-gh-release@v1
+            strip --strip-all release/github_build_test
+      - name: Upload debug binary to release
+        uses: svenstaro/upload-release-action@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: |
-            target/release/github_build_test
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/debug/github_build_test
+          asset_name: github_build_test_x86_debug
+          tag: ${{ github.ref }}
+          overwrite: true
+      - name: Upload release binary to release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/github_build_test
+          asset_name: github_build_test_x86
+          tag: ${{ github.ref }}
+          overwrite: true
