--- a/.github/workflows/release_x86.yaml
+++ b/.github/workflows/release_x86.yaml
@@ -3,6 +3,8 @@ name: Release_x86
 on:
   push:
     branches: [ master ]
+    tags:
+      - "v*.*.*"
   pull_request:
     branches: [ master ]
 
@@ -31,7 +33,34 @@ jobs:
             apt-get update -q -y
             apt-get upgrade -y
             apt-get install -q -y rust-all libgtk-4-dev libadwaita-1-dev
-      - name: Build
+      - name: Build debug binary
+        run: cargo build --verbose
+      - name: Run tests for debug binary
+        run: cargo test --verbose
+      - name: Build release binary
+        if: startsWith(github.ref, 'refs/tags/')
         run: cargo build --release --verbose
-      - name: Run tests
+      - name: Run tests for release binary
+        if: startsWith(github.ref, 'refs/tags/')
         run: cargo test --release --verbose
+      - name: Strip the release binary
+        if: startsWith(github.ref, 'refs/tags/')
+        run: strip --strip-all release/github_build_test
+      - name: Upload debug binary to release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/debug/github_build_test
+          asset_name: github_build_test_aarch64_debug
+          tag: ${{ github.ref }}
+          overwrite: true
+      - name: Upload release binary to release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/github_build_test
+          asset_name: github_build_test_aarch64
+          tag: ${{ github.ref }}
+          overwrite: true
