--- a/.github/workflows/release_x86_64.yaml
+++ b/.github/workflows/release_x86_64.yaml
@@ -1,4 +1,4 @@
-name: Release_aarch64
+name: Release_x86
 
 on:
   push:
@@ -12,54 +12,55 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  release-for-aarch64:
+  release-for-x86:
     runs-on: ubuntu-latest
-    name: ci (arm64)
+    name: ci (amd64)
+    container:
+      image: ubuntu:jammy
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Build in arm64 container
-        uses: pentamassiv/run-on-arch-action@d7221eba38842f988199732187fc0af9e258f2b2
-        with:
-          arch: aarch64
-          distro: ubuntu_devel
-          # Install deps into the container. With the token, the container will be cached
-          # The image is cached publically like a package
-          githubToken: ${{ github.token }}
-          #  Install packages for the arm container (e.g. Dockerfile steps)
-          install: |
+
+
+
+
+
+
+
+
+      - name: Install dependencies
+        run:  |
             apt-get update -q -y
             apt-get upgrade -y
             apt-get install -q -y binutils rust-all libgtk-4-dev libadwaita-1-dev
-          #   .. run build steps on the container
-          run: |
-            uname -m
-            cat /etc/lsb-release
+      - name: Build and test debug binary
+        run: |
             cargo build --verbose
             cargo test --verbose
-            mv debug/github_build_test debug/github_build_test_debug_aarch64
-            sha256sum release/github_build_test_debug_aarch64 > release/github_build_test_debug_aarch64_sha256.txt
+            mv debug/github_build_test debug/github_build_test_debug_x86_64
+            sha256sum debug/github_build_test_debug_x86_64 > debug/github_build_test_debug_x86_64_sha256.txt
+      - name: Build, test and strip the release binary
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
             cargo build --release --verbose
             cargo test --release --verbose
             strip --strip-all release/github_build_test
-            mv release/github_build_test release/github_build_test_aarch64
-            sha256sum release/github_build_test_aarch64 > release/github_build_test_aarch64_sha256.txt
-      - name: Upload debug binary to release
+            mv release/github_build_test release/github_build_test_x86_64
+            sha256sum release/github_build_test_x86_64 > release/github_build_test_x86_64_sha256.txt
+      - name: Add debug binary to release
         uses: svenstaro/upload-release-action@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/debug/github_build_test
-          asset_name: github_build_test_aarch64_debug
           tag: ${{ github.ref }}
           overwrite: true
-      - name: Upload release binary to release
+      - name: Add release binary to release
         uses: svenstaro/upload-release-action@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/release/github_build_test
-          asset_name: github_build_test_aarch64
           tag: ${{ github.ref }}
           overwrite: true
       - name: Add SHA256 file of debug binary to release
@@ -67,7 +68,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: debug/github_build_test_debug_aarch64.txt
+          file: debug/github_build_test_debug_x86_64.txt
           tag: ${{ github.ref }}
           overwrite: true
       - name: Add SHA256 file of release binary to release
@@ -75,6 +76,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: release/github_build_test_aarch64_sha256.txt
+          file: release/github_build_test_x86_64_sha256.txt
           tag: ${{ github.ref }}
           overwrite: true
