--- a/.github/workflows/release_pkgbuild.yaml
+++ b/.github/workflows/release_pkgbuild.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Replace the version number
