--- a/.github/workflows/release_aarch64.yaml
+++ b/.github/workflows/release_aarch64.yaml
@@ -2,11 +2,11 @@ name: Release_aarch64
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     tags:
       - "v*.*.*"
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
